# Automation-Auditor

./: .gitignore  Architecture_Plan.md  ReadMe.md  TESTING_GUIDE.md  app.py  main.py  pyproject.toml  requirements.txt  rubric.json
audits/: audit_report_20260304_164429.md  audit_report_20260304_183156.md  audit_report_20260304_183438.md  audit_report_20260304_183616.md  audit_report_20260304_183638.md  audit_report_20260304_193447.md
audits/cache/: audit_metadata.json
evals/: audit_evaluator.py  dataset_creator.py
src/: state.py
src/nodes/: detectives.py  judges.py  supreme_court.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
src/utils/: checkpoint_manager.py
